force-app/main/default/objects/Opp_VP_Position__c/Opp_VP_Position__c.object-meta.xml
<CustomObject>
    <description>Opportunity Valuation Period Positions linked with Opportunity and Companies</description>
    <label>Opp Valuation Period Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opp Valuation Period Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>