force-app/main/default/objects/Opp_VP_Position__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Company</description>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Houlihan_Company</value>
        </filterItems>
        <filterItems>
            <field>Account.Id</field>
            <operation>notEqual</operation>
            <value>001i000001T7e9v</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opp_PV_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>