force-app/main/default/objects/Opp_VP_Position__c/fields/Opportunity_VP__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_VP__c</fullName>
    <description>Related Opportunity</description>
    <label>Opportunity Valuation Period</label>
    <referenceTo>Opp_VP__c</referenceTo>
    <relationshipName>Opp_VP_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>