force-app/main/default/objects/Opp_VP_Position__c/fields/ResultingEngagemnetRTonVPP__c.field-meta.xml
<CustomField>
    <fullName>ResultingEngagemnetRTonVPP__c</fullName>
    <description>Resulting Engagement Record Type on Valuation Period Position</description>
    <formula>Opportunity_VP__r.Opportunity__r.Resulting_Egmt_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultingEngagemnetRTonVPP</label>
    <type>Text</type>
</CustomField>