force-app/main/default/objects/Opp_VP_Position__c/fields/Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Date__c</fullName>
    <formula>Opportunity_VP__r.Valuation_Date__c</formula>
    <label>Valuation Date</label>
    <type>Date</type>
</CustomField>