force-app/main/default/objects/Opp_VP_Position__c/validationRules/HL_Opp_Position_is_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_Position_is_locked</fullName>
    <active>true</active>
    <description>To stop modification on position if Opportunity is converted.</description>
    <errorConditionFormula>IF((AND( NOT(ISNEW()),  AND(Opportunity_VP__r.Opportunity__r.Converted_to_Engagement__c, NOT(ISCHANGED(Opportunity_VP__c))))), true, false)</errorConditionFormula>
    <errorMessage>Position can not be modified once Opportunity is converted into Engagement so please go to related Engagement Valuation Position for further modification.</errorMessage>
</ValidationRule>