force-app/main/default/objects/Opp_VP_Position__c/validationRules/HL_Opp_VP_Position_Creation_Is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_Position_Creation_Is_Locked</fullName>
    <active>true</active>
    <description>To stop creating Opp VP position if Opportunity is converted.</description>
    <errorConditionFormula>IF(AND(ISNEW(),  Opportunity_VP__r.Opportunity__r.Converted_to_Engagement__c), true, false)</errorConditionFormula>
    <errorMessage>Position can not be created once Opportunity is converted into Engagement so please go to related Engagement Valuation Position for further creation.</errorMessage>
</ValidationRule>