force-app/main/default/objects/Opp_VP_Position__c/validationRules/HL_Opp_VP_Position_CreationLockedEngNoRq.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_Position_CreationLockedEngNoRq</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISNEW(),  AND( ISPICKVAL(Opportunity_VP__r.Opportunity__r.Approval_Process__c, &apos;CONVERSION&apos;), ISPICKVAL(Opportunity_VP__r.Opportunity__r.Engagement_Approval_Status__c, &apos;Pending&apos;) )), true, false)</errorConditionFormula>
    <errorMessage>Position can not be created as Opportunity is locked for Engagement Number Approval Process. Please try once the process is completed or Contact to System Administrator.</errorMessage>
</ValidationRule>