force-app/main/default/objects/Opp_VP_Position__c/validationRules/HL_OppVP_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_OppVP_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing Opportunity Valuation Period on position.</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(ISCHANGED(Opportunity_VP__c), true, false), false)</errorConditionFormula>
    <errorDisplayField>Opportunity_VP__c</errorDisplayField>
    <errorMessage>You are not allowed to change &apos;Opportunity Valuation Period&apos;.</errorMessage>
</ValidationRule>