force-app/main/default/objects/Opp_VP_Position__c/validationRules/Position_Asset_Classes_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Position_Asset_Classes_Validation</fullName>
    <active>true</active>
    <description>If Asset Calsses is  &apos;Other&apos; then require value in Notes</description>
    <errorConditionFormula>IF( AND(ISPICKVAL(Asset_Classes__c , &apos;Other&apos;),ISBLANK( Notes__c )),true, false)</errorConditionFormula>
    <errorMessage>Notes is required if Asset Classes is &apos;Other&apos;.</errorMessage>
</ValidationRule>