force-app/main/default/objects/Opp_VP_Position__c/validationRules/ReportFeeFieldValidation_OppVPPos.validationRule-meta.xml
<ValidationRule>
    <fullName>ReportFeeFieldValidation_OppVPPos</fullName>
    <active>true</active>
    <description>Report fee can not be negative</description>
    <errorConditionFormula>IF(Report_Fee__c &lt; 0, true, false)</errorConditionFormula>
    <errorMessage>Report fee can not be negative.</errorMessage>
</ValidationRule>